# CRUD_API

./: .coverage  .env  .gitignore  README.md  app.py  memory  modelagem  pyproject.toml  test_app.py  test_main.http
Tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_tasks.py  test_users.py
api_tasks/: app.py
fast_zero/: app.py  schemas.py  test_app.py
migrations/: env.py
migrations/versions/: 2f1e478bbded_create_tables.py  5996d3301676_create_update_at_collum.py  c370b92f3797_create_users_table.py
routes/: auth.py  users.py
src/: app.py  models.py  schemas.py  security.py
src/routes/: auth.py  tasks.py  users.py
